[gd_scene load_steps=23 format=3 uid="uid://ctia5wdmpr63o"]

[ext_resource type="Script" uid="uid://cvtp2rumfj2q7" path="res://code/camera.gd" id="1_0wfyh"]
[ext_resource type="Script" uid="uid://csbw82n26ojo2" path="res://code/main.gd" id="1_85g3d"]
[ext_resource type="Texture2D" uid="uid://lrgs8v4u57jh" path="res://border.png" id="1_o5qli"]
[ext_resource type="AudioStream" uid="uid://cv7kcnq3uyg0j" path="res://audio/impactWood_light_004.ogg" id="2_tefeu"]
[ext_resource type="AudioStream" uid="uid://bilrmn78xta28" path="res://audio/impactPlate_light_000.ogg" id="3_tefeu"]
[ext_resource type="Script" uid="uid://cer5hyeyth0po" path="res://code/control.gd" id="5_o6xl0"]
[ext_resource type="Texture2D" uid="uid://curc5evqmnai7" path="res://home.png" id="5_tbgi4"]
[ext_resource type="Texture2D" uid="uid://crkgiyt8vjyhh" path="res://arrows.png" id="6_tefeu"]
[ext_resource type="Texture2D" uid="uid://cf1bm6eutd8dx" path="res://image(26).png" id="8_tipki"]
[ext_resource type="AudioStream" uid="uid://bm5yjyd6fxb8u" path="res://audio/victory1.mp3" id="10_choun"]
[ext_resource type="FontFile" uid="uid://cq2w2xcc67dm5" path="res://Montserrat-Bold.ttf" id="10_ya4ey"]

[sub_resource type="Environment" id="Environment_0wfyh"]
background_mode = 1
background_color = Color(0.0962047, 0.0962048, 0.0962047, 1)
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
reflected_light_source = 1
fog_light_color = Color(0.0338533, 0.0338533, 0.0338533, 1)
volumetric_fog_albedo = Color(0.0646965, 0.0646965, 0.0646965, 1)
volumetric_fog_emission = Color(0.051971, 0.051971, 0.051971, 1)

[sub_resource type="BoxMesh" id="BoxMesh_0wfyh"]
size = Vector3(7, 7, 7)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sugp2"]
transparency = 1
cull_mode = 2
albedo_color = Color(1, 1, 1, 0.196078)
albedo_texture = ExtResource("1_o5qli")
uv1_scale = Vector3(3, 2, 1)
texture_filter = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tipki"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.629674, 0.629675, 0.629674, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_85g3d"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_choun"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.521141, 0.521141, 0.521141, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ya4ey"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.521141, 0.521141, 0.521141, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tefeu"]
resource_local_to_scene = true
shading_mode = 0
vertex_color_use_as_albedo = true
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_tefeu"]
material = SubResource("StandardMaterial3D_tefeu")
size = Vector2(0.05, 0.1)

[sub_resource type="Curve" id="Curve_85g3d"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_tefeu"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.247839, 0.495677, 0.766571, 1)
colors = PackedColorArray(0.917647, 0.196078, 0.235294, 1, 0, 0.596078, 0.862745, 1, 0.352941, 0.772549, 0.309804, 1, 1, 0.784314, 0.145098, 1, 1, 1, 1, 1)

[node name="Main" type="Node3D"]
script = ExtResource("1_85g3d")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0wfyh")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.433013, 0.5, -0.75, -0.25, 0.866025, 0.433013, 0.866025, 0, 0.5, 0, 0, 0)

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 0, 0)
script = ExtResource("1_0wfyh")

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 15)
projection = 1
size = 12.0

[node name="RayCast3D" type="RayCast3D" parent="CameraPivot/Camera3D"]
target_position = Vector3(0, 0, 0)

[node name="Place" type="AudioStreamPlayer" parent="CameraPivot"]
stream = ExtResource("2_tefeu")
volume_db = -15.0

[node name="Error" type="AudioStreamPlayer" parent="CameraPivot"]
stream = ExtResource("3_tefeu")
volume_db = -15.0
pitch_scale = 0.75

[node name="Bounds" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_0wfyh")
surface_material_override/0 = SubResource("StandardMaterial3D_sugp2")
metadata/_edit_lock_ = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_o6xl0")

[node name="MenuButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 840.0
offset_top = 16.0
offset_right = 896.0
offset_bottom = 72.0
theme_override_styles/focus = SubResource("StyleBoxFlat_tipki")
theme_override_styles/hover = SubResource("StyleBoxFlat_tipki")
theme_override_styles/normal = SubResource("StyleBoxFlat_tipki")
icon = ExtResource("5_tbgi4")
icon_alignment = 1
expand_icon = true

[node name="NextLevelButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 904.0
offset_top = 16.0
offset_right = 944.0
offset_bottom = 72.0
theme_override_styles/focus = SubResource("StyleBoxFlat_85g3d")
theme_override_styles/disabled = SubResource("StyleBoxFlat_choun")
theme_override_styles/hover = SubResource("StyleBoxFlat_85g3d")
theme_override_styles/normal = SubResource("StyleBoxFlat_85g3d")
icon = ExtResource("6_tefeu")
icon_alignment = 1
expand_icon = true

[node name="PreviousLevelButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 792.0
offset_top = 16.0
offset_right = 832.0
offset_bottom = 72.0
theme_override_styles/focus = SubResource("StyleBoxFlat_85g3d")
theme_override_styles/disabled = SubResource("StyleBoxFlat_ya4ey")
theme_override_styles/hover = SubResource("StyleBoxFlat_85g3d")
theme_override_styles/normal = SubResource("StyleBoxFlat_85g3d")
icon = ExtResource("8_tipki")
icon_alignment = 1
expand_icon = true

[node name="LevelLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 160.0
offset_bottom = 87.0
theme_override_fonts/font = ExtResource("10_ya4ey")
theme_override_font_sizes/font_size = 24
text = "LEVEL 2"

[node name="CPUParticles3D" type="CPUParticles3D" parent="." groups=["confetti"]]
emitting = false
amount = 512
lifetime = 3.0
one_shot = true
explosiveness = 0.25
mesh = SubResource("QuadMesh_tefeu")
emission_shape = 3
emission_box_extents = Vector3(3.5, 0.5, 3.5)
direction = Vector3(0, -1, 0)
spread = 5.0
gravity = Vector3(0, -0.25, 0)
initial_velocity_min = 0.25
initial_velocity_max = 3.0
angular_velocity_min = -500.0
angular_velocity_max = 500.0
tangential_accel_min = -1.0
tangential_accel_max = 1.0
angle_min = -720.0
angle_max = 720.0
scale_amount_curve = SubResource("Curve_85g3d")
color_initial_ramp = SubResource("Gradient_tefeu")

[node name="Victory" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_choun")
volume_db = -15.0

[connection signal="pressed" from="Control/MenuButton" to="Control" method="_on_menu_button_pressed"]
[connection signal="pressed" from="Control/NextLevelButton" to="Control" method="_on_next_level_button_pressed"]
[connection signal="pressed" from="Control/PreviousLevelButton" to="Control" method="_on_previous_level_button_pressed"]
